tests/ui/view-types/must-be-struct.stderr
error: only structs can be viewed
  --> $DIR/must-be-struct.rs:11:9
   |
LL | fn f(_: view_type!(Foo.{})) {}
   |         ^^^^^^^^^^^^^^^^^^ `Foo` is an enum, it cannot be viewed

error: only structs can be viewed
  --> $DIR/must-be-struct.rs:13:9
   |
LL | fn g(_: view_type!(u8.{})) {}
   |         ^^^^^^^^^^^^^^^^^ type `u8` cannot be viewed

error: only structs can be viewed
  --> $DIR/must-be-struct.rs:15:9
   |
LL | fn h(_: view_type!(char.{})) {}
   |         ^^^^^^^^^^^^^^^^^^^ type `char` cannot be viewed

error: aborting due to 3 previous errors

